# corert

./: build.cmd  build.sh  dir.props  dir.targets  m
Infra/packaging/: NuSpec.cs  Program.cs
Infra/scripts/: common.ps1  install-cli.sh  pack.ps1  push.ps1
infra/packaging/: Constants.cs  NuSpec.cs  Program.cs  Utils.cs  project.json
infra/scripts/: build.ps1  build.sh  common.ps1  common.sh  install-cli.sh  pack.ps1  pack.sh  push.ps1  sync-pusher.ps1
src/: NuGet.config  dirs.proj
src/.nuget/: packages.Unix.config  packages.Windows_NT.config  packages.targets  runtime.json  toolchain.Linux-x64.Microsoft.DotNet.ILCompiler.Development.nuspec  toolchain.Linux-x64.Microsoft.DotNet.ILToNative.Development.nuspec  toolchain.osx.10.10-x64.Microsoft.DotNet.ILCompiler.Development.nuspec  toolchain.ubuntu.14.04-x64.Microsoft.DotNet.ILCompiler.Development.nuspec  toolchain.win7-x64.Microsoft.DotNet.ILCompiler.Development.nuspec
src/AotPackageReference/: project.lock.json
src/ILCompiler/: ILCompiler.sln
src/ILCompiler.Compiler/src/: ILCompiler.Compiler.csproj
src/ILCompiler/desktop/: App.config  desktop.csproj  project.json
src/ILCompiler/repro/: Program.cs
src/ILCompiler/src/: Program.cs  project.json
src/JitInterface/src/: CorInfoImpl.cs
src/Native/: CMakeLists.txt
src/Native/Bootstrap/: main.cpp
src/Native/Bootstrap/cpp/: CMakeLists.txt
src/packaging/: Program.cs  nightly-push.ps1  packages.targets
src/scripts/: dotnet-compile-native.sh  sync-to-time.ps1
tests/: .gitignore  ilc.cmd  restore.cmd  restore.sh  runtest.cmd  runtest.sh  testenv.sh
(+67 files in other folders)
